Added article for Introduction to Debugging

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SuperDark Blog
-description: A blog about Game Engines and other topics.
+description: A blog about Computer Science and other magics.
 show_downloads: false
 google_analytics: false
 theme: jekyll-theme-hacker
